fix nav menu colours on mobile

--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -207,7 +207,7 @@
 		}
 
 		strong, b {
-			color: _palette($p, fg-bold);
+			// color: _palette($p, fg-bold);
 		}
 
 		h1, h2, h3, h4, h5, h6 {
